feat: 新增登入畫面

--- a/compose/src/main/res/values/strings.xml
+++ b/compose/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Android-Playground</string>
+    <string name="stock">Stock</string>
+    <string name="stock_sample">Stock範例</string>
 </resources>
